fixed side overflow issue and uhhh text...

--- a/style/style.scss
+++ b/style/style.scss
@@ -5,38 +5,16 @@ body{
     color:black;
     background:white;
     transition-duration: 1s;
-}
-
-p{
+    margin:0;
     font-size: 40px;
 }
 
 col{
     margin:0;
+    padding:0;
 }
 
-#line1{
-    height: 50rem;
-    margin:0;
-    //background: $m-blue;
-}
-#line2{
-    height: 50rem;
-    margin:0;
-    //background: $m-blue;
-}
-#line3{
-    height: 50rem;
-    margin:0;
-    //background: $m-blue;
-}
-#line4{
-    height: 50rem;
-    margin:0;
-    //background: $m-blue;
-}
-
-#line5{
+.line{
     height: 50rem;
     margin:0;
     //background: $m-blue;
